# pyutils

./: .gitignore  MANIFEST.in  README.md  fileconvert.ps1  fileconvert.sh  pyproject.toml  setup.cfg  setup.py
src/file_converter/: __init__.py  __main__.py  cli.py
src/file_converter/converters/: csv_to_json.py  json_to_csv.py
src/file_converter/parsers/: delimiter.py
src/file_converter/utils/: escape.py
src/my_package/: cli.py  main.py
src/tests/: test_csv_to_json.py  test_json_to_csv.py
tests/: test_integration.py  test_main.py
