[metadata]
name = my_python_project
version = 0.1.0
description = A brief description of your project
author = Your Name
author_email = your.email@example.com
license = MIT
url = https://github.com/yourusername/my_python_project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6

[options.entry_points]
console_scripts =
    my-command = my_package.cli:main

[options.packages.find]
where = src